# pgx-sequence-aligner

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
align/: cli.py  needleman_wunsch.py  scoring.py
api/: main.py
data/: sample.fasta
src/: __init__.py  cli.py
tests/: test_alignment.py  test_cli.py
