[project]
name = "pgx-sequence-aligner"
version = "0.1.0"
description = "Pairwise sequence alignment showcase with CLI and FastAPI surfaces."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.135.1",
  "pydantic==2.12.5",
  "uvicorn==0.41.0",
]

[project.scripts]
pgx-sequence-aligner = "align.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["align", "api", "src"]

[tool.ruff]
line-length = 100
target-version = "py311"
